# msdfgen

./: .clang-format  CMakeLists.txt  msdfgen-api.h
core/: Bitmap.h  c-api.cpp
ext/: import-font.h
src/: CMakeLists.txt
src/msdf/: CMakeLists.txt
src/msdf-cl/src/: gl-util.c  kernel.cl  msdf-cl.cpp  msdf-lib.cpp  msdf-lib.h
src/msdf/include/: msdf.h
src/msdf/src/: Bitmap.h  EdgeHolder.h  c-api.cpp  contour-combiners.cpp  edge-segments.cpp  edge-segments.h  edge-selectors.cpp  edge-selectors.h  import-font.cpp  import-font.h  import-svg.cpp  import-svg.h  msdfgen-ext.h  msdfgen.cpp  msdfgen.h  save-png.cpp  save-png.h
src/msdfgen/: CMakeLists.txt
src/msdfgen/src/: main.cpp
